added headline to API
